k8s/lab-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-microservice
  labels:
    app: lab-microservice
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: lab-microservice
  template:
    metadata:
      labels:
        app: lab-microservice
    spec:
      containers:
        - name: lab-microservice
          # GitHub Actions burayı tag'e göre güncelleyecek:
          # örn: taskin87/lab-microservice:v1.2.17
          image: taskin87/lab-microservice:v1.2.17
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: lab-microservice
  labels:
    app: lab-microservice
spec:
  selector:
    app: lab-microservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
